Added base action bar and drawer

--- a/BaseAndroid/src/main/res/values/strings.xml
+++ b/BaseAndroid/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">BaseAndroid</string>
 	<string name="hello_world">The Base CM Android Project!</string>
 	<string name="action_settings">Options</string>
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
 </resources>
