Update base activity classes in order to include navigation drawer and compatActionBar more naturally to extended classes.

--- a/BaseAndroid/src/main/res/values/strings.xml
+++ b/BaseAndroid/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
 	<string name="action_settings">Options</string>
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
+	<string name="title_section1">Section 1</string>
+	<string name="title_section2">Section 2</string>
+	<string name="title_section3">Section 3</string>
 </resources>
