--- a/BaseAndroid/src/main/res/values/strings.xml
+++ b/BaseAndroid/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
 	<string name="action_settings">Options</string>
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
+	<string name="ok">OK</string>
+	<string name="cancel">Cancel</string>
+	<string name="select_date">Select a date</string>
 </resources>
