--- a/BaseAndroid/src/main/res/values/strings.xml
+++ b/BaseAndroid/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
-    <string name="app_name">BaseAndroid</string>
+	<string name="app_name">BaseAndroid</string>
 	<string name="hello_world">The Base CM Android Project!</string>
-	<string name="action_settings">Options</string>
-    <string name="drawer_open">Open</string>
-    <string name="drawer_close">Close</string>
+	<string name="action_toolbar">Without Toolbar</string>
+	<string name="action_no_toolbar">With Toolbar</string>
+	<string name="drawer_open">Open</string>
+	<string name="drawer_close">Close</string>
 </resources>
